--- a/index.htm
+++ b/index.htm
@@ -1173,9 +1173,8 @@
                                                     </div>
                                                     <div class="choose-content">
                                                         <h2 class="title">Protect the <br> identity</h2>
-                                                        <p>Protecting identity with Paisa Coin likely implementing 
-                                                            security measures to safeguard users personal and financial transactions.
-                                                            Paisa Coin provides users with increased privacy.</p>
+                                                        <p>Protecting identity with Paisa Coin likely involves implementing robust security 
+                                                            measures to personal and financial information transactions.and sensitive data is kept confidential.</p>
                                                     </div>
                                                 </div>
                                             </div>
